--- a/views/main.edge
+++ b/views/main.edge
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
     <title>
         @!section('title')
     </title>
@@ -20,5 +22,6 @@
             </ol>
         </div>
     </div>
+    <script src="./js/script.js"></script>
 </body>
 </html>
