--- a/views/pages/error.edge
+++ b/views/pages/error.edge
@@ -5,5 +5,5 @@
 @endsection
 
 @section('content')
-    <h1>Ohhhh no 404 error not Found :(</h1>
+    <h1>Oh no 404 error not Found :(</h1>
 @endsection
